infrastructure-terraform/eks.tf
# security Groups for EKS cluster

resource "aws_security_group" "eks_cluster" {
    name = "${var.project_name}-eks-cluster-sg"
    description = "Security group for EKS cluster control plane"
    vpc_id = aws_vpc.main.id

    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "${var.project_name}-eks-cluster-sg"
    }    
}

# EKS CLuster ( Control Plane)

resource "aws_eks_cluster" "main" {
  name     = "${var.project_name}-cluster"
  role_arn = aws_iam_role.eks_cluster.arn
  version  = "1.36"

  vpc_config {
    subnet_ids              = concat(aws_subnet.public[*].id, aws_subnet.private[*].id)
    security_group_ids      = [aws_security_group.eks_cluster.id]
    endpoint_private_access = true
    endpoint_public_access  = true   # Set to false in strict production
  }

depends_on = [
    aws_iam_role_policy_attachment.eks_cluster_policy
  ]
}

# ── EKS Node Group (Worker Nodes in private subnets)

resource "aws_eks_node_group" "main" {
  cluster_name    = aws_eks_cluster.main.name
  node_group_name = "${var.project_name}-nodes"
  node_role_arn   = aws_iam_role.eks_nodes.arn

  # Place nodes in private subnets only
  subnet_ids = aws_subnet.private[*].id

  instance_types = var.eks_node_instance_type
  ami_type = "AL2023_x86_64_STANDARD"
  scaling_config {
    desired_size = var.eks_desired_nodes
    min_size     = var.eks_min_nodes
    max_size     = var.eks_max_nodes
  }

  update_config {
    max_unavailable = 1   # Rolling update — always keep 1 node up
  }

  depends_on = [
    aws_iam_role_policy_attachment.eks_worker_node,
    aws_iam_role_policy_attachment.eks_cni,
    aws_iam_role_policy_attachment.eks_ecr_read,
  ]

  tags = { Name = "${var.project_name}-nodes" }
}
